fixed sidebar overflow-x

--- a/client/src/screens/Dashboard/Dashboard.module.css
+++ b/client/src/screens/Dashboard/Dashboard.module.css
@@ -20,5 +20,5 @@
 
 .innerLayout{
     flex: 1;
-    overflow: scroll;
+    overflow-x: scroll;
 }
